nav ul off-screen fix

--- a/assets/css/master.scss
+++ b/assets/css/master.scss
@@ -182,7 +182,7 @@ nav {
     margin: 0;
     padding: 0;
     list-style-type: none;
-    @include transform(translateX(-100rem));
+    @include transform(translateX(-150rem));
     @include transition(all, 0.25s, ease);
     li {
       display: flex;
